[package]
name = "axum-observability"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
description = "Axum middleware for request IDs, trace correlation, and structured access logs."
license = "MIT"
repository = "https://github.com/janisto/axum-observability"
homepage = "https://github.com/janisto/axum-observability"
documentation = "https://docs.rs/axum-observability"
readme = "README.md"
keywords = ["axum", "logging", "middleware", "observability", "tracing"]
categories = ["web-programming::http-server", "development-tools::debugging"]
publish = ["crates-io"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
