[package]
name = "axum-observability"
version = "0.2.0"
edition = "2024"
rust-version = "1.96.1"
description = "Axum middleware for request IDs, trace correlation, and structured access logs."
license = "MIT"
repository = "https://github.com/janisto/axum-observability"
homepage = "https://github.com/janisto/axum-observability"
documentation = "https://docs.rs/axum-observability"
readme = "README.md"
keywords = ["axum", "logging", "middleware", "observability", "tracing"]
categories = ["web-programming::http-server", "development-tools::debugging"]
publish = ["crates-io"]
include = [
  "src/**",
  "examples/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "CHANGELOG.md",
  "EXAMPLES.md",
  "LICENSE",
]

[dependencies]
axum = "=0.8.9"
http-body = "=1.1.0"
pin-project-lite = "=0.2.17"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
time = { version = "=0.3.53", features = ["formatting"] }
tower = "=0.5.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["fmt", "registry"] }
uuid = { version = "=1.24.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "=0.1.4"
tokio = { version = "=1.52.4", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "=0.5.3", features = ["util"] }
tower-http = { version = "=0.7.0", features = ["catch-panic", "cors", "limit", "timeout"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt", "registry"] }

[profile.mutants]
inherits = "test"
debug = 0

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
