[package]
name = "axum-observability-e2e"
version = "0.0.0"
edition = "2024"
rust-version = "1.97.0"
publish = false

[dependencies]
axum = "0.8.0"
axum-observability = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.4", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt"] }
