[package]
name = "axum-observability-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
axum-observability = { path = ".." }

[[bin]]
name = "request_id"
path = "fuzz_targets/request_id.rs"
test = false
doc = false
bench = false
[[bin]]
name = "traceparent"
path = "fuzz_targets/traceparent.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tracestate"
path = "fuzz_targets/tracestate.rs"
test = false
doc = false
bench = false
